# byblos

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml  build.rs  cbindgen.toml
core/include/: byblos_core.h
core/src/: ffi.rs  lib.rs
core/src/audio/: capture.rs  denoise.rs  mod.rs  resample.rs  vad.rs
core/src/llm/: mod.rs
core/src/models/: manager.rs  mod.rs  parakeet.rs  whisper.rs
core/src/pipeline/: mod.rs  stream.rs
core/src/text/: commands.rs  format.rs  mod.rs
docs/: CNAME  index.html  manual.html  privacy.html  terms.html
llm-helper/: Cargo.toml
llm-helper/src/: main.rs
macos/: project.yml
macos/Byblos/: Byblos.entitlements  Info.plist
macos/Byblos/Agent/: AgentEngine.swift  AgentMemory.swift  FileSearch.swift  ScreenReader.swift  ScriptRunner.swift  SkillsManager.swift  TaskScheduler.swift  WebBrowser.swift
macos/Byblos/App/: AppDelegate.swift  ByblosApp.swift
macos/Byblos/Assets/: AppIcon.icns
macos/Byblos/Bridge/: ByblosCore-Bridging-Header.h  CoreBridge.swift
macos/Byblos/Models/: DictationMode.swift  VocabularyStore.swift
macos/Byblos/Services/: AccessibilityService.swift  AudioService.swift  HotkeyService.swift  LicenseService.swift  LlmService.swift
macos/Byblos/Views/: MenuBarView.swift  NagView.swift  (+5 more)
models/: distil-whisper-large-v3.toml  moonshine.toml  nemo-parakeet.toml  whisper-large-v3.toml  whisper-medium.toml  whisper-small.toml  whisper-tiny.toml  whisper-turbo.toml  whisper.toml
scripts/: build.sh  download-model.sh  generate-icons.sh  release.sh  setup.sh
tests/: integration_test.sh
