[package]
name = "byblos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for Byblos — local voice-to-text"

[lib]
name = "byblos_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Audio
cpal = "0.15"
rubato = "0.16"
hound = "3.5"

# Whisper
whisper-rs = { version = "0.13", features = ["metal"] }

# LLM
llama-cpp-2 = { version = "0.1.139", features = ["metal"] }
encoding_rs = "0.8"

# VAD / ONNX
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.16"

# Utilities
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
parking_lot = "0.12"
crossbeam-channel = "0.5"
ringbuf = "0.4"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[features]
default = ["whisper"]
whisper = []
onnx = []
metal = []

[build-dependencies]
cc = "1"
