[package]
name = "byblos-llm-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM helper process for Byblos — runs in separate process to avoid ggml-metal conflicts"

[[bin]]
name = "byblos-llm"
path = "src/main.rs"

[dependencies]
llama-cpp-2 = { version = "0.1.139", features = ["metal"] }
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
